main application notebook file

--- a/StockTrend-SVM-Stock-Predictor.ipynb
+++ b/StockTrend-SVM-Stock-Predictor.ipynb
@@ -7,8 +7,8 @@
     "id": "cec0654e"
    },
    "source": [
-    "#**StockTrend SVM: Stock Price Direction Predictor using Support Vector Machine**\n",
-    "This notebook applies a classical machine learning approach to predict whether a stock's closing price will rise or fall the next day. It uses a Support Vector Machine (SVM) and engineered financial indicators derived from Yahoo Finance data. The project serves as a demonstration of classical ML techniques applied in a financial context."
+    "# **StockTrend SVM: Predicting Stock Price Direction with a Support Vector Machine**\n",
+    "This notebook demonstrates a classical machine learning approach to forecasting whether a stock’s closing price will rise or fall the next day. It employs a Support Vector Machine (SVM) classifier trained on technical indicators derived from Yahoo Finance data. The project illustrates how traditional machine learning techniques can be effectively applied to financial prediction tasks."
    ]
   },
   {
